objects/Financial_Account__c.object
<CustomObject>
    <description>Used by Consumer Deposits to capture account details for a person</description>
    <fields>
        <fullName>Account_Number_Last4__c</fullName>
        <description>Last 4 characters of the account number</description>
        <label>Account Number (Last 4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Title__c</fullName>
        <label>Account Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active_Debit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Debit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of Internet</fullName>
                </value>
                <value>
                    <fullName>BofI Federal Bank</fullName>
                </value>
                <value>
                    <fullName>UFB Direct</fullName>
                </value>
                <value>
                    <fullName>BofI Advisor</fullName>
                </value>
                <value>
                    <fullName>BofI Federal Bank BOA</fullName>
                </value>
                <value>
                    <fullName>NetBank</fullName>
                </value>
                <value>
                    <fullName>Bank X</fullName>
                </value>
                <value>
                    <fullName>Bank Social</fullName>
                </value>
                <value>
                    <fullName>Specialty Deposits</fullName>
                </value>
                <value>
                    <fullName>Virtus Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Funded__c</fullName>
        <label>Date Funded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JHA_RECORD_ID__c</fullName>
        <description>Captures the Record ID from JHA</description>
        <externalId>true</externalId>
        <label>JHA RECORD ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Statement_Date__c</fullName>
        <label>Last Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OLD_JHA_ID__c</fullName>
        <label>OLD_JHA_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>IF(Person_Account_Count__c &gt; 1, &apos;Joint&apos;, &apos;Single&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Person Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_ACH_Total__c</fullName>
        <label>Previous Month ACH Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_POS_Count__c</fullName>
        <label>Previous Month POS Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Rewards_POS_Count__c</fullName>
        <label>Previous Month Rewards POS Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retirement Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Associate__c</fullName>
        <label>Sales Associate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escheat</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>New Today</fullName>
                </value>
                <value>
                    <fullName>Pending Close</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>No Post</fullName>
                </value>
                <value>
                    <fullName>Charged Off</fullName>
                </value>
                <value>
                    <fullName>No Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Funding_Amount__c</fullName>
        <label>Total Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trust Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zero_Balance_Date__c</fullName>
        <label>Zero Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zero_Balance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zero Balance Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Account</label>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>